<resources>
	<string name="app_name">За покупками</string>

	<string name="catched_exception">Catched exception</string>
	<string name="error_file_not_create">Не удалось создать файл</string>
	<string name="error_out_of_memory">Нехватки памяти для обработки картинки</string>
	<string name="error_bitmap">Произошла ошибка обработки</string>
	<string name="error_name">Введите название</string>
	<string name="next">Далее</string>
	<string name="close">Закрыть</string>
	<string name="ok">OK</string>

	<!--Lists-->
	<string name="you_lists">Ваши списки покупок</string>
	<string name="list_empty">Список пуст</string>
	<string name="nothing_bought">Ничего не куплено. Всего&#160;</string>
	<string name="all_bought">Все куплено</string>
	<string name="bought">Куплено&#160;</string>
	<string name="of">&#160;из&#160;</string>
	<string name="list_image">Изображение списка</string>
	<string name="showcase_create_list_desc">Нажмите на \"плюсик\", чтобы создать новый список</string>
	<string name="showcase_manage_list_desc">Нажмите на \"карандаш\" для изменения списка, а на \"корзину\" - для его удаления</string>
	<string name="showcase_open_list_desc">Нажмите на карточку списка для его просмотра</string>
	<string name="error_delete">Ошибка удаления</string>
	<!--menu-->
	<string name="take_photo">"Сделать снимок</string>
	<string name="select_from_gallery">Выбрать из галереи</string>
	<string name="random_image">Случайное</string>
	<!--layout-->
	<string name="list_name">Название списка</string>
	<string name="list_currency">Валюта списка</string>
	<string name="no_lists">Нет списков</string>
	<string name="empty_list">В списке нет ни одного товара</string>

	<!--ShoppingListFragment-->
	<string name="ask_delete_list">Удалить список</string>
	<string name="showcase_create_item">Нажмите на \"плюсик\", чтобы добавить новый товар</string>
	<string name="showcase_edit_item">Нажмите на строку товара, для просмотра информации о нем</string>
	<string name="showcase_swipe_item_1">Вычеркните товар, проведя по нему слева направо</string>
	<string name="showcase_unswipe_item_1">Для отмены покупки, вычеркните товар повторно</string>
	<string name="showcase_swipe_item_2">Для отмены покупки, вычеркните товар проведя по нему слева направо</string>
	<string name="showcase_unswipe_item_2">Вычеркните товар и он отметится как купленный</string>
	<string name="showcase_delete_item">Зажмите строку товара для перехода в режим удаления</string>
	<string name="showcase_spent_sum">Следите сколько Вы уже потратили</string>
	<string name="showcase_category">Группируйте Ваши покупки по категориям</string>
	<string name="showcase_sum_category">Отслеживайте сумму покупок по каждой категории</string>
	<string name="showcase_collapse_category">Для удобства просмотра, Вы можете свернуть категорию, кликнув по ней</string>
	<!--layout-->
	<string name="spent_money">Потрачено</string>
	<string name="all_money">Всего</string>
	<!--menu-->
	<string name="expanded_all">Развернуть все</string>
	<string name="collapsed_all">Свернуть все</string>

	<!--ItemFragment-->
	<string name="info_exit_item">Такой товар уже существует.\nНазвание товара должно быть уникальным</string>
	<string name="info_wrong_value">Проверьте ввод данных</string>
	<string name="info_data_is_save">Данные сохранены</string>
	<string name="info_exit_item_in_list">Товар есть в списке и будет перезаписан</string>
	<string name="error_length_name">Не меньше 3 символов</string>
	<string name="error_value">Неверное значение</string>
	<string name="finish_price">Итоговая сумма:&#160;</string>
	<string name="add">Добавить</string>
	<string name="wait_load_image">Подождите загрузки картинки</string>
	<string name="ask_save_item">Сохранить изменения?</string>
	<string name="item_image">Изображение товара</string>
	<string name="showcase_update_image_item">Нажмите на картинку для смены изображения</string>
	<string name="showcase_bought_item">Уже купили? \nОтметьте это при создании или изменении товара</string>
	<string name="data_save">Данные сохранены</string>
	<!--item menu-->
	<string name="delete_list">Удалить список</string>
	<string name="update_list">Изменить список</string>
	<string name="update">Обновить</string>
	<string name="default_image">По умолчанию</string>
	<!--CAB menu-->
	<string name="delete">Удалить</string>
	<string name="move">Переместить</string>
	<string name="select_bought">Все купленные</string>
	<string name="select_not_bought">Все не купленные</string>
	<!--Layout-->
	<string name="amount">Количество</string>
	<string name="price">Цена</string>
	<string name="category">Категория</string>
	<string name="comment">Комментарий</string>
	<string name="in_card">В корзину</string>

	<!--Dialog-->
	<string name="save">Сохранить</string>
	<string name="cancel">Отмена</string>

	<!--Question-->
	<string name="yes">Да</string>
	<string name="no">Нет</string>

	<!--Image-->
	<string name="error_failed_get_file">Не удалось получить файл</string>

	<!--settings-->
	<string name="settings">Настройки</string>
	<string name="settings_list">Списки</string>
	<string name="settings_key_open_last_list">open_last_list</string>
	<string name="settings_title_open_last_list">Открывать последний список</string>
	<string name="settings_summary_open_last_list">Запускать приложение на последнем активном списке</string>
	<string name="settings_key_sort_type">sort_type</string>
	<string name="settings_title_sort_type">Порядок сортировки</string>
	<string name="settings_summary_sort_type">Выберите как будут отсортированы товары</string>
	<string name="settings_dialog_title_sort_type">Выберите порядок сортировки по ...</string>
	<string name="settings_key_sort_is_bought">sort_is_bought</string>
	<string name="settings_title_sort_is_bought">Купленные внизу</string>
	<string name="settings_summary_sort_is_bought">Отображать вверху еще не купленные товары</string>
	<string name="settings_key_use_category">use_category</string>
	<string name="settings_title_use_category">Использование категорий</string>
	<string name="settings_summary_use_category">Разбивать товары по категориям в списке</string>
	<string name="settings_key_collapse_category">collapse_category</string>
	<string name="settings_title_collapse_category">Схлопование категорий</string>
	<string name="settings_summary_collapse_category">Скрывать/показывать товары при нажатии на категорию</string>

	<string name="settings_category_data_item">Детали товара</string>
	<string name="settings_key_auto_complete_data">auto_complete_data</string>
	<string name="settings_title_auto_complete_data">Автозаполнение</string>
	<string name="settings_summary_auto_complete_data">Заполнять выбранные поля, используя последние данные о товаре</string>
	<string name="settings_key_auto_complete_screen">auto_complete_screen</string>
	<string name="settings_title_auto_complete_screen">Поля для автозаполения</string>
	<string name="settings_title_add_item">Добавление товара</string>
	<string name="settings_title_edit_item">Редактироание товара</string>
	<string name="settings_key_auto_complete_amount_add">auto_complete_amount_add</string>
	<string name="settings_key_auto_complete_amount_edit">auto_complete_amount_edit</string>
	<string name="settings_title_auto_complete_amount">Количество</string>
	<string name="settings_key_auto_complete_unit_add">auto_complete_unit_add</string>
	<string name="settings_key_auto_complete_unit_edit">auto_complete_unit_edit</string>
	<string name="settings_title_auto_complete_unit">Единица измерения</string>
	<string name="settings_key_auto_complete_price_add">auto_complete_price_add</string>
	<string name="settings_key_auto_complete_price_edit">auto_complete_price_edit</string>
	<string name="settings_title_auto_complete_price">Цена</string>
	<string name="settings_key_auto_complete_comment_add">auto_complete_comment_add</string>
	<string name="settings_key_auto_complete_comment_edit">auto_complete_comment_edit</string>
	<string name="settings_title_auto_complete_comment">Комментарий</string>
	<string name="settings_key_text_selection_screen">text_selection_screen</string>
	<string name="settings_title_text_selection_screen">Выделение текста при фокусе</string>
	<string name="settings_key_text_selection_name">text_selection_name</string>
	<string name="settings_title_text_selection_name">Название</string>
	<string name="settings_key_text_selection_amount">text_selection_amount</string>
	<string name="settings_title_text_selection_amount">Количество</string>
	<string name="settings_key_text_selection_price">text_selection_price</string>
	<string name="settings_title_text_selection_price">Цена</string>
	<string name="settings_key_text_selection_comment">text_selection_comment</string>
	<string name="settings_title_text_selection_comment">Комментарий</string>
	<string name="settings_key_fast_edit">fast_edit</string>
	<string name="settings_title_fast_edit">Быстрое добавление значения в каталог</string>
	<string name="settings_summary_fast_edit">Вначале выпадающего списка появится пункт \"Добавить\"</string>

	<string name="sort_order_alphabet">алфавиту</string>
	<string name="sort_order_adding">порядку добавления</string>
	<string name="sort_order_up_price">возрастанию цены за единицу измерения</string>
	<string name="sort_order_down_price">убыванию цены за единицу измерения</string>
	<string name="sort_order_up_purchase_price">возрастанию цены за покупку</string>
	<string name="sort_order_down_purchase_price">убыванию цены за покупку</string>

	<!--catalogs-->
	<string name="catalogs">Каталоги</string>
	<string name="catalogs_key_item">catalogs_key_item</string>
	<string name="catalogs_items">Товары</string>

	<string name="catalogs_key_currency">catalogs_key_currency</string>
	<string name="catalogs_currency">Валюты</string>
	<string name="currency_info">Информация о валюте</string>
	<string name="currency_symbol">Символ или сокращение</string>
	<string name="showcase_default_currency">Валюта по умолчанию отмечена цветом, для ее изменения нажмите на \"звездочку\" нужной валюты</string>
	<string name="select_default_currency">Выбрана валютой по умолчанию</string>

	<string name="catalogs_key_unit">catalogs_key_unit</string>
	<string name="catalogs_unit">Единицы измерения</string>
	<string name="unit_info">Единица измерения</string>

	<string name="catalogs_key_category">catalogs_key_category</string>
	<string name="catalogs_category">Категории товаров</string>
	<string name="category_info">Категория товаров</string>
	<string name="item_info">Товар</string>
	<string name="error_add_exist_item">Товар уже есть в базе и будет обновлен</string>
	<string name="error_edit_exist_item">Товар с таким именем уже существует</string>
	<string name="auto_complete_data">Данные для автозаполнения: </string>
	<string name="empty_search">Ничего не найдено</string>

	<string name="name">Название</string>
	<string name="error_empty">Не может быть пустым</string>
	<string name="error_one_item">Что-то должно остаться</string>
	<string name="ask_delete_catalog">Значение уже используется. При удалении, оно будет заменено на: </string>
	<string name="ask_delete_item">Значение уже используется в следующих списках: </string>

	<!--Navigation drawer-->
	<string name="last_list">Последний список</string>
	<string name="feedback">Обратная связь</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<!--Ad-->
	<string name="banner_ad_unit_id">ca-app-pub-3804902313328755/8598932222</string>

	<!--Feedback-->
	<string name="feedback_email">Ainege@gmail.com</string>
	<string name="subject">Приложение \"За покупками\"</string>
	<string name="feedback_error">Упс... Похоже у Вас нет почтового клиента</string>

	<!--Crop Activity-->
	<string name="crop_image_menu_rotate_right">Поворот</string>
	<string name="crop_image_menu_crop">Обрезать</string>
	<string name="error_crop">Ошибка обработки</string>
</resources>
