<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/app_bar_height"
		android:fitsSystemWindows="true"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<android.support.design.widget.CollapsingToolbarLayout
			android:id="@+id/collapsing_toolbar"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fitsSystemWindows="true"
			app:contentScrim="?attr/colorPrimary"
			app:layout_scrollFlags="scroll|exitUntilCollapsed">

			<ImageView
				android:id="@+id/appbar_image"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:fitsSystemWindows="true"
				android:scaleType="centerCrop"
				app:layout_collapseMode="parallax"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/scrim_height"
				android:layout_gravity="top"
				android:background="@drawable/scrim_top"
				android:fitsSystemWindows="true"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/scrim_height"
				android:layout_gravity="bottom"
				android:background="@drawable/scrim_bottom"/>

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				app:layout_collapseMode="pin"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

				<Button
					android:id="@+id/save_item"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:background="@android:color/transparent"
					android:drawableLeft="@drawable/ic_done_white_24dp"
					android:drawablePadding="10dp"
					android:padding="10dp"
					android:text="@string/save"/>

			</android.support.v7.widget.Toolbar>
		</android.support.design.widget.CollapsingToolbarLayout>
	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:id="@+id/scroll"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingLeft="@dimen/padding_16dp"
			android:paddingRight="@dimen/padding_16dp"
			android:paddingTop="10dp">

			<android.support.design.widget.TextInputLayout
				android:id="@+id/name_input_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<AutoCompleteTextView
					android:id="@+id/new_item_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/name"
					android:inputType="textCapSentences"
					android:maxLength="35"
					android:paddingLeft="@dimen/padding_hint"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<TextView
				android:id="@+id/info"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/name_input_layout"
				android:layout_gravity="center_horizontal"
				android:gravity="center_horizontal"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="#dd2c00"
				android:visibility="gone"/>

			<TextView
				android:id="@+id/amount_text"
				android:layout_width="@dimen/column_left"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:gravity="left"
				android:text="@string/amount"
				android:layout_alignBottom="@+id/amount_input_layout"
				android:layout_marginBottom="@dimen/margin_bottom"/>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/amount_input_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/info"
				android:layout_toLeftOf="@+id/amount_unit"
				android:layout_toRightOf="@+id/amount_text">

				<EditText
					android:id="@+id/new_amount_item"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:digits="0123456789.,"
					android:gravity="center"
					android:inputType="numberDecimal"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<Spinner
				android:id="@+id/amount_unit"
				android:layout_width="@dimen/column_right"
				android:layout_height="wrap_content"
				android:layout_toEndOf="@+id/price_input_layout"
				android:gravity="center"
				android:layout_alignBottom="@+id/amount_input_layout"
				android:layout_marginBottom="@dimen/margin_bottom"/>

			<TextView
				android:id="@+id/price_text"
				android:layout_width="@dimen/column_left"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:gravity="left"
				android:text="@string/price"
				android:layout_alignBottom="@+id/price_input_layout"
				android:layout_marginBottom="@dimen/margin_bottom"/>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/price_input_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/amount_input_layout"
				android:layout_toLeftOf="@+id/currency"
				android:layout_toRightOf="@+id/price_text">

				<EditText
					android:id="@+id/new_item_price"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:digits="0123456789.,"
					android:gravity="center"
					android:inputType="numberDecimal"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<TextView
				android:id="@+id/currency"
				android:layout_width="@dimen/column_right"
				android:layout_height="wrap_content"
				android:layout_alignEnd="@+id/comment_input_layout"
				android:layout_alignRight="@+id/comment_input_layout"
				android:gravity="center"
				android:layout_alignBottom="@+id/price_input_layout"
				android:layout_marginBottom="@dimen/margin_bottom"/>

			<TextView
				android:id="@+id/finish_price"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/price_input_layout"
				android:ellipsize="end"
				android:gravity="right"
				android:maxLines="1"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:visibility="gone"/>

			<LinearLayout
				android:id="@+id/category_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/finish_price">

				<TextView
					android:id="@+id/category_text"
					android:layout_width="@dimen/column_left"
					android:layout_height="wrap_content"
					android:layout_marginBottom="1dp"
					android:gravity="left"
					android:text="@string/category"/>

				<Spinner
					android:id="@+id/category"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:gravity="center"/>

			</LinearLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/comment_input_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/category_container"
				android:layout_marginTop="8dp">

				<EditText
					android:id="@+id/comment"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/comment"
					android:inputType="textCapSentences|textMultiLine"
					android:maxLength="210"
					android:maxLines="5"/>

			</android.support.design.widget.TextInputLayout>

			<ToggleButton
				android:id="@+id/is_bought"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignEnd="@+id/amount_unit"
				android:layout_alignRight="@+id/amount_unit"
				android:layout_below="@+id/comment_input_layout"
				android:background="@null"
				android:drawableRight="@drawable/ic_toggle_button"
				android:textOff="@string/in_card"
				android:textOn="@string/bought"/>

		</RelativeLayout>

	</android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>