<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="@dimen/padding_16dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/image"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:adjustViewBounds="true"
			android:scaleType="centerCrop"
			android:src="@drawable/no_image"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:focusableInTouchMode="true"
			android:orientation="vertical"
			android:paddingLeft="@dimen/padding_16dp"
			android:paddingRight="@dimen/padding_16dp"
			android:paddingTop="10dp">

			<android.support.design.widget.TextInputLayout
				android:id="@+id/name_input_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/name"
					android:imeOptions="actionNext"
					android:inputType="textCapSentences"
					android:maxLength="35"
					android:paddingLeft="@dimen/padding_hint"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<TextView
				android:id="@+id/info"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="#dd2c00"
				android:visibility="gone"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="20dp"
				android:gravity="center_vertical"
				android:weightSum="1">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="@dimen/margin_columns"
					android:text="@string/catalogs_unit"/>

				<Spinner
					android:id="@+id/unit"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:gravity="center_vertical"
				android:weightSum="1">

				<TextView
					android:id="@+id/category_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="@dimen/margin_columns"
					android:text="@string/category"/>

				<Spinner
					android:id="@+id/category"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>
</ScrollView>