<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1" >

    <TextView
        android:id="@+id/list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/new_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:hint="@string/add_item"/>

    <LinearLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:layout_marginBottom="2dp"
            android:background="@android:color/black"/>

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:layout_marginBottom="3dp"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:layout_marginRight="3dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/spent_money"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/spent_money"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"/>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal"
            android:layout_marginRight="3dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/all_money"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/total_money"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"/>
            </HorizontalScrollView>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/empty_list"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>